add login and logout and register user
